fix: Location not visible on UP part tags

--- a/src/styles/components/printable-components/part-tag.scss
+++ b/src/styles/components/printable-components/part-tag.scss
@@ -98,7 +98,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  margin-left: 1rem;
+  margin-left: 2rem;
 
   h1 {
     font-size: 170px;
